# Software-Project-Directory

./: LICENSE  README.md
ALC/: CMakeLists.txt  tree.txt
ALC/Daemon/: CMakeLists.txt
ALC/Daemon/resource/systemd/: daemon-template.service
ALC/QtApp/: CMakeLists.txt  main.cpp
ALC/installer/config/: config.xml
ALC/script/: install_daemon.sh  remove_daemon.sh
ProjectForOpenGL/: CMakeLists.txt
ProjectForOpenGL/include/: test.hpp
ProjectForOpenGL/src/: main.cpp  test.cpp
SDL2_Project/include/: test.hpp
SDL2_Project/src/: main.cpp  test.cpp
